--- a/src/expressjs/package.json
+++ b/src/expressjs/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jakeoliverlee/resume#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
