--- a/src/expressjs/package.json
+++ b/src/expressjs/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "flowbite": "^1.6.5",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22"
   },
