--- a/src/expressjs/package.json
+++ b/src/expressjs/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jakeoliverlee/resume#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "daisyui": "^2.51.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "flowbite": "^1.6.5",
