--- a/src/expressjs/package.json
+++ b/src/expressjs/package.json
@@ -23,7 +23,8 @@
     "express": "^4.18.2",
     "flowbite": "^1.6.5",
     "mongoose": "^7.0.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "react-typed": "^1.2.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.1"
