--- a/src/expressjs/package.json
+++ b/src/expressjs/package.json
@@ -21,6 +21,7 @@
     "daisyui": "^2.51.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "firebase": "^9.21.0",
     "flowbite": "^1.6.5",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
