--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -18,10 +18,8 @@ jobs:
           cache: 'npm'
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
-      - name: Install Dependencies
-        run: npm ci
       - name: Build
-        run: npm run build
+        run: firebase deploy
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
