--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for Jake's resume website",
   "main": "index.js",
   "scripts": {
-    "build": "firebase deploy"
+    "build": "firebase deploy",
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
     "react-typed": "^1.2.0"
   },
   "devDependencies": {
+    "cypress": "^12.11.0",
     "tailwindcss": "^3.3.1"
   }
 }
