--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -14,8 +14,8 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
-          cache: 'npm'
+          node-version: "16.13.x"
+          cache: "npm"
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
       - name: Deploy to Firebase
@@ -24,8 +24,7 @@ jobs:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_JAKEOLIVERLEE_MAIN }}'
+          repoToken: "${{ secrets.GITHUB_TOKEN }}"
+          firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_JAKEOLIVERLEE_MAIN }}"
           channelId: live
           projectId: jakeoliverlee-main
-
