--- a/firebase.json
+++ b/firebase.json
@@ -3,12 +3,8 @@
     "rules": "database.rules.json"
   },
   "hosting": {
-    "public": "src/expressjs/pages/home",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "public": "/src/pages/home",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
