add cloud functions and server side code to fetch resume

--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,11 @@
   },
   "hosting": {
     "public": "/src/pages/home",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
@@ -12,5 +16,17 @@
       }
     ]
   },
-  "extensions": {}
+  "extensions": {},
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ]
+    }
+  ]
 }
