--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "firebase": "^9.21.0",
     "flowbite": "^1.6.5",
+    "mongodb": "^5.5.0",
     "mongoose": "^7.0.3",
     "nodemon": "^2.0.22",
     "react-typed": "^1.2.0"
